--- a/TIM3_ADC.ioc
+++ b/TIM3_ADC.ioc
@@ -134,6 +134,7 @@ Mcu.Pin7=PA9
 Mcu.Pin8=PA10
 Mcu.Pin9=PA11
 Mcu.PinsNb=18
+Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
 MxCube.Version=4.22.1
@@ -209,13 +210,13 @@ PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=true
+ProjectManager.AskForMigrate=false
 ProjectManager.BackupPrevious=false
-ProjectManager.CompilerOptimize=2
+ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
-ProjectManager.CustomerFirmwarePackage=D\:\\STM32Cube\\Repository\\STM32Cube_FW_F4_V1.16.0
-ProjectManager.DefaultFWLocation=false
+ProjectManager.CustomerFirmwarePackage=
+ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F407ZGTx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.16.0
@@ -225,6 +226,8 @@ ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
+ProjectManager.MainLocation=Src
+ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=TIM3_ADC.ioc
@@ -233,7 +236,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_ADC1_Init-ADC1-false-HAL,5-MX_TIM3_Init-TIM3-false-HAL,6-MX_USART1_UART_Init-USART1-false-HAL,7-MX_CAN1_Init-CAN1-false-HAL,8-MX_TIM2_Init-TIM2-false-HAL,9-MX_DAC_Init-DAC-false-HAL,10-MX_TIM5_Init-TIM5-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_CAN1_Init-CAN1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_DAC_Init-DAC-false-HAL-true,10-MX_TIM5_Init-TIM5-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
